--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -300,13 +304,6 @@
    "source": [
     "print(\"{:.4f} +/- {:.4f}\".format(np.mean(scores), np.std(scores)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
