Implemented neural network model.

--- a/custom_loss_evaluation.ipynb
+++ b/custom_loss_evaluation.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom loss evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +37,15 @@
     "from models import WeightedLogisticRegression\n",
     "\n",
     "RANDOM_SEED = 42\n",
-    "np.random.seed(RANDOM_SEED)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "np.random.seed(RANDOM_SEED)\n",
+    "\n",
     "def label_from_multi(y_multi):\n",
     "    return torch.tensor([1 if y == 0 else 0 for y in y_multi]).float()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
