--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fact checking project\n",
+    "Classification based on text data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -35,7 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -249,59 +261,6 @@
    ],
    "source": [
     "scores = cross_val_score(pipeline, x_all, y_all, scoring=\"roc_auc\", cv=100)\n",
-    "print(\"{:.4f} +/- {:.4f}\".format(np.mean(scores), np.std(scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbb28736922b47ec989f3452b8659e06",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores = []\n",
-    "for rs in trange(100):\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(data.drop(\"label\", axis=1), get_label(data), random_state=rs)\n",
-    "    pipeline.fit(x_train, y_train)\n",
-    "    roc_auc = evaluate(pipeline, x_test, y_test, verbose=False)\n",
-    "    scores.append(roc_auc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7408 +/- 0.0165\n"
-     ]
-    }
-   ],
-   "source": [
     "print(\"{:.4f} +/- {:.4f}\".format(np.mean(scores), np.std(scores)))"
    ]
   }
